--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb://localhost:27017/minha-plataforma
 GOOGLE_CLIENT_ID=912274681406-139krsfr75ma7khg8khm7pbt4qdg5hru.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 SESSION_SECRET=your_session_secret
+MERCADO_PAGO_ACCESS_TOKEN=APP_USR-6757817723632797-111321-7e971b9cf61cbf26622fc63aaf2aac3d-380986595
