--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ PORT=5000
 MONGO_URI=mongodb://localhost:27017/minha-plataforma
 GOOGLE_CLIENT_ID=912274681406-139krsfr75ma7khg8khm7pbt4qdg5hru.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-SESSION_SECRET=your_session_secret
+SESSION_SECRET=@88Ab15Cd98Ef13
 MERCADO_PAGO_ACCESS_TOKEN=APP_USR-6757817723632797-111321-7e971b9cf61cbf26622fc63aaf2aac3d-380986595
+JWT_SECRET=@88Ab15Cd98Ef12
